<resources>
    <string name="app_name">Money-Manager</string>
    <string name="texto_registro">Registrarse</string>
    <string name="texto_iniciarses">Iniciar Sesión</string>
    <string name="texto_inicie_sesion">Inicia sesión en Money Manager</string>
    <string name="texto_sin_cuenta">Continuar sin crear una cuenta</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Iniciar Sesión</string>
    <string name="instruccionEmail">Ingrese su dirección de correo electrónico</string>
    <string name="instruccionContraseña">Ingrese una contraseña</string>
    <string name="textContraseña">Contraseña</string>
    <string name="textSiguiente">Siguiente</string>
    <string name="textRepita">Repita su contraseña</string>
    <string name="descriptionImg">Login de la Aplicacion</string>
    <string name="msjLogin">Inicia sesion en Money Manager</string>
    <string name="txtFrCuentas">Cuentas</string>
    <string name="txtFrMovimientos">Movimientos</string>
    <string name="txtFrCategorias">Categorias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>